fixed bgc and tower-container stretch

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   max-width: 900px;
   margin: 0 auto;
-  background-color: #f8f8ff;
+
   font-size: 1.4rem;
   text-align: center;
 }
